Styling fixes for mobile view

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -724,6 +724,10 @@ video {
   max-width: 28rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
@@ -756,10 +760,6 @@ video {
 
 .overflow-auto {
   overflow: auto;
-}
-
-.overflow-y-auto {
-  overflow-y: auto;
 }
 
 .rounded-lg {
